--- a/src/Pages/MoviesGrid.css
+++ b/src/Pages/MoviesGrid.css
@@ -13,4 +13,51 @@
 	max-width: 1200px;
 	margin: 0 auto;
 }
+.movies-container div{
+	width: 30%;
+	color: #fff;
+	margin-bottom: 2.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #111;
+	padding: 1rem;
+}
+
+.movies-container div img {
+	max-width: 100%;
+}
+
+.movies-container div img,
+.movies-container div p,
+.movies-container div h2 {
+	margin-bottom: 1rem;
+}
+
+
+
+.movies-container div a {
+	background-color: #ff0000;
+	border: 2px solid #ff0000;
+	border-radius: 7px;
+	color: #000;
+	padding: 1rem .5rem;
+	align-items: center;
+	transition: .2s;
+	text-align: center;
+	font-weight: bold;
+}
+
+.movies-container div a:hover{
+	background-color: transparent;
+	color: #ff0000;
+}
+
+.query-text {
+	color: #ff0000;
+}
+
+.movies-container div svg {
+	color: #ff0000
+}
 
