--- a/src/Pages/Movie.css
+++ b/src/Pages/Movie.css
@@ -7,7 +7,7 @@
 }
 
 .movie-page svg {
-	font-size: 1.4rem;
+	font-size: 1.5rem;
 	color: #ff0000;
 }
 
@@ -25,7 +25,7 @@
 	font-size: 2rem;
 }
 
-.movie-page .movieCard p {
+.movie-page .movieCard p {	
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -38,8 +38,13 @@
 	margin-bottom: 2rem;
 }
 
+
 .info {
 	margin-bottom: 1.5rem;
+}
+.info p {
+	font-size: 1.3rem;
+	line-height: 1.4rem;
 }
 
 .info h3{
@@ -50,11 +55,6 @@
 }
 
 .description {
-	padding-bottom: 1.4rem;
-	display: flex;
-	flex-direction: column;
+	padding-bottom: 1rem;
 }
 
-.description p {
-	line-height: 1.4rem;
-}
